tests/should_succeed/intnative_size.jou
import "stdlib/intnative.jou"
import "stdlib/io.jou"

def main() -> int:
    match sizeof(1 as intnative):
        case sizeof(1 as int):
            puts("int")  # Output: <intnative>
        case sizeof(1 as int64):
            puts("int64")
        case _:
            puts("wat")
    return 0
