tests/syntax_error/multidot_float.jou
def get_ip() -> double:
    return 127.0.0.1  # Error: invalid number or variable name "127.0.0.1"
